Project

General

Profile

Actions

Bug #16558

closed

rbd-mirror: FAILED assert(m_local_image_ctx->object_map != nullptr)"

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The exclusive lock for the local image was lost due to cluster starvation during image sync. The daemon should gracefully handle this scenario.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16576: jewel: rbd-mirror: FAILED assert(m_local_image_ctx->object_map != nullptr)"ResolvedLoïc DacharyActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Priority changed from Normal to High
Actions #2

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Loïc Dachary almost 8 years ago

  • Copied to Backport #16576: jewel: rbd-mirror: FAILED assert(m_local_image_ctx->object_map != nullptr)" added
Actions #5

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF